--- a/src/Search.module.scss
+++ b/src/Search.module.scss
@@ -1,4 +1,5 @@
 .list {
+  position: absolute;
   background-color: #fff;
   margin: 0;
   padding: 0;
@@ -11,4 +12,9 @@
     }
     cursor: pointer;
   }
+}
+
+.button {
+  width: 40px;
+  height: 40px;
 }
