--- a/src/Info.module.scss
+++ b/src/Info.module.scss
@@ -1,10 +1,14 @@
+.image {
+  width: 100%;
+}
+
 .container {
-  height: 100vh;
-  width: 400px;
-  background-color: #fff;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1000;
-  overflow: auto;
+  background-color: white;
+  padding: 1.5rem;
+}
+
+.close {
+  position: fixed;
+  top: 0.5rem;
+  right: 0.5rem;
 }
