--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -13,3 +13,13 @@
   display: flex;
   align-items: baseline;
 }
+
+.info {
+  height: 100vh;
+  width: 400px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  overflow: auto;
+}
