--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -1,3 +1,5 @@
+@import './breakpoints.scss';
+
 .timeline {
   position: absolute;
   bottom: 0;
@@ -15,11 +17,19 @@
 }
 
 .info {
+  @include for-phone-only {
+    width: 100vw;
+  }
+  @include for-tablet-portrait-up {
+    width: 400px;
+  }
   height: 100vh;
-  width: 400px;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 1000;
   overflow: auto;
+
+  // at the bottom, include padding that will cover the timeline, so we can see data below
+  padding-bottom: calc(50px + 0.75rem);
 }
