Make services in Info clickable. Add service to Info when clicked

--- a/src/Info.module.scss
+++ b/src/Info.module.scss
@@ -29,3 +29,12 @@
     }
   }
 }
+
+.serviceButton {
+  text-align: left;
+  &:hover {
+    background-color: #eee;
+  }
+  padding: 0.2rem;
+  margin-left: -0.2rem;
+}
