--- a/src/Info.module.scss
+++ b/src/Info.module.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 .image {
   width: 100%;
 }
@@ -37,4 +39,13 @@
   }
   padding: 0.2rem;
   margin-left: -0.2rem;
+}
+
+.openingHours {
+  display: grid;
+  grid-template-columns: auto auto auto;
+
+  .selfService {
+    color: $helmet-orange;
+  }
 }
